--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             <section class="contact">
                 
                 <h3>CONTACT</h3>
-                <p>Adresse</br>
+                <p>Adresse<br>
                     Paris, France </p>
-                <p>Téléphone</br>
+                <p>Téléphone<br>
                     06 76 83 98 16</p>
-                <p>Email </br>
+                <p>Email <br>
                     <a href="mailto:clairedemettre@gmail.com">clairedemettre@gmail.com</a></p>
-                <p>Site web </br>
-                    <a href="www.quatuorsinequanon.com" alt="quatuor sinequanon"> www.quatuorsinequanon.com </a></p>
-                <p>Linkedin</br>
-                    <a href="https://www.linkedin.com/in/clairelisedemettre/" alt="Claire-Lise Démettre">Claire-Lise Démettre</a></p>
-                <p>Skype</br>
+                <p>Site web <br>
+                    <a href="www.quatuorsinequanon.com" title="quatuor sinequanon"> www.quatuorsinequanon.com </a></p>
+                <p>Linkedin<br>
+                    <a href="https://www.linkedin.com/in/clairelisedemettre/" title="Claire-Lise Démettre">Claire-Lise Démettre</a></p>
+                <p>Skype<br>
                     <a href="https://join.skype.com/invite/brvpsHfsUhRO">@clairedemettre_1</a></p>
                 
             </section>
@@ -49,7 +49,7 @@
             </section>
             <section class="loisirs">
                 <h3>LOISIRS</h3>
-                <div id="icones">
+                <div class="icones">
                    <span class="icones_loisirs"><i class="fas fa-camera"></i></span>
                    <span class="icones_loisirs"><i class="fas fa-book"></i></span>
                    <span class="icones_loisirs"><i class="fas fa-biking"></i></span>
@@ -57,6 +57,119 @@
                 </div>
             </section>
         </aside>
+        <!--Partie droite principale-->
+        <main>
+            <section>
+                <div class="titre_droit">
+                    <i class="fas fa-university"></i>
+                    <h3>FORMATION</h3>
+                </div>
+                <div class="contenu_droit">
+                    <i class="far fa-dot-circle"></i>
+                    <p class="date_lieu">2020 - Actuel <br> Paris</p>
+                    <article>
+                        <h3>OpenClassrooms</h3>
+                        <p>Développeur Web</p>
+                        <p>Formation de développeur web en 6 mois commencée en mai 2020</p>
+                    </article>
+                </div>
+                <div class="contenu_droit">
+                    <i class="fas fa-circle"></i>
+                    <p class="date_lieu">2011 - 2014<br> Londres</p>
+                    <article>
+                        <h3>Guildhall School of Music and Drama</h3>
+                        <p>Violoncelle</p>
+                        <ul>
+                            <li>2012 Postgraduate and Concert Recital Diploma</li>
+                            <li>2014 Artist Diploma</li>
+                        </ul>
+                    </article>
+                </div>
+                <div class="contenu_droit">
+                    <i class="fas fa-circle"></i>
+                    <p class="date_lieu">2007-2011 <br> Essen (Allemagne)</p> 
+                    <article>
+                        <h3>Folkwang Universität der Kunst</h3>
+                        <p>Violoncelle</p>
+                        <p>KonzertExam</p>
+                    </article>
+                </div>
+                <div class="contenu droit">
+                    <i class="fas fa-circle"></i>
+                    <p class="date_lieu">2003-2007 <br> Lyon</p> 
+                    <article>
+                        <h3>CNSMDL de Lyon</h3>
+                        <p>Violoncelle et Musique de chambre</p>
+                        <ul>
+                            <li>2007 DENSM Mention TB Violoncelle</li>
+                            <li>2007 DNESM Mention TB Quatuor à cordes</li>
+                        </ul>
+                    </article>  
+                </div>
+            </section>
+            <section>
+                <div class="titre_droit">
+                    <i class="fas fa-briefcase"></i>
+                    <h3>EXPERIENCE PROFESSIONNELLE</h3>
+                </div>
+                <div class="contenu_droit">
+                    <i class="far fa-dot-circle"></i>
+                    <p class="date_lieu">2011 - Actuel <br> Paris</p>
+                    <article>
+                        <h3>Violoncelliste Professionnelle</h3>
+                        <p>Actuellement</p>
+                        <p>
+                            <ul>
+                                <li>Violoncelliste du Quatuor Sinequanon</li>
+                                <li>Violoncelle Solo de l'Ensemble Matheus</li>
+                                <li>Violoncelle Co-Solo du Cercle de l'Harmonie</li>
+                                <li>Violoncelliste de la Cappella Gabetta et de Gabetta Consort</li>
+                                <li>Violoncelle solo invitée Les Siècles, Les Musiciens du Prince, Orchestre Symphonique de Mulhouse....</li>
+                            </ul>
+                        </p>
+                    </article>
+                <div class="contenu_droit">
+                    <i class="fas fa-circle"></i>
+                    <p class="date_lieu">2019 <br> Paris </p> 
+                    <article>
+                        <h3>Développeuse Web Wordpress</h3>
+                        <p>Création d'un site web Wordpress pour <a href="www.ensemble-magnetis.fr">l'Ensemble Magnétis</a></p>
+                    </article>
+                </div>
+                <div class="contenu_droit">
+                    <i class="fas fa-circle"></i>
+                    <p class="date_lieu">2016 <br> Paris </p> 
+                    <article>
+                        <h3>Développeuse Web Wordpress</h3>
+                        <p>Création d'un site web Wordpress pour <a href="www.quatuorsinequanon.com">le Quatuor Sinequanon</a></p>
+                    </article>
+                </div>
+            </section>
+            <section>
+                <div class="titre_droit">
+                    <i class="fas fa-pencil-alt"></i>
+                    <h3>RECOMMANDATIONS</h3>
+                </div>
+                <div class="recommandations">
+                    <div class="contact_recommandation1">
+                        <h5> Sébastien Bouveyron</h5>
+                        <p>Directeur artistique Ensemble Magnétis</p>
+                        <a href="tel:+33600000000">06 00 00 00 00</a><br />
+                        <a href="mailto:SB@email.com">SB@email.com</a>
+                    </div>
+                </div>
+                <div class="recommandations">
+                    <div class="contact_recommandation2">
+                        <h5> Joffrey Goullet</h5>
+                        <p>Mentor OpenClassrooms</p>
+                        <a href="tel:+33600000000">06 00 00 00 00</a><br />
+                        <a href="mailto:JG@email.com">JG@email.com</a>
+                    </div>
+                </div>
+
+
+
+        </main>
 
     </div>
 
